added navigation bar.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Influencer Gear</title>
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- header start -->
+    <header>
+      <nav class="navigation-bar">
+        <h1>Influencer products</h1>
+      </nav>
+    </header>
+    <!-- header end -->
+
+    <!-- main start -->
+    <main>
+      <div></div>
+      <div></div>
+    </main>
+  </body>
 </html>
