cover-info almost done.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Influencer Gear</title>
     <!-- stylesheet -->
     <link rel="stylesheet" href="./styles/style.css" />
+
+    <!-- script -->
+    <script
+      src="https://kit.fontawesome.com/bc36980841.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- header start -->
@@ -19,8 +25,23 @@
 
     <!-- main start -->
     <main>
-      <div></div>
-      <div></div>
+      <div class="cover-page">
+        <div class="cover-page-info">
+          <h1>Start your Journey as Influencer</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+            alias quos placeat perferendis pariatur beatae, quam culpa et itaque
+            architecto maxime non cupiditate atque incidunt dolore qui illo sit.
+            Aspernatur.
+          </p>
+          <button class="pink-button">
+            Preebook now <i class="fas fa-arrow-right"></i>
+          </button>
+        </div>
+        <div class="cover-pic">
+          <img src="./images/main-camera.png" alt="picture of a camera" />
+        </div>
+      </div>
     </main>
   </body>
 </html>
