page-info done.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             architecto maxime non cupiditate atque incidunt dolore qui illo sit.
             Aspernatur.
           </p>
-          <button class="pink-button">
+          <button class="pink-button preebook-button">
             Preebook now <i class="fas fa-arrow-right"></i>
           </button>
         </div>
