cover-page done.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
     <main>
       <div class="cover-page">
         <div class="cover-page-info">
-          <h1>Start your Journey as Influencer</h1>
+          <h1>
+            Start your Journey as <br />
+            Influencer
+          </h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
             alias quos placeat perferendis pariatur beatae, quam culpa et itaque
