--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             Aspernatur.
           </p>
           <button class="pink-button preebook-button">
-            Preebook now <i class="fas fa-arrow-right"></i>
+            <a href="">Preebook now <i class="fas fa-arrow-right"></i></a>
           </button>
         </div>
         <div class="cover-pic">
