added products image and some info

--- a/index.html
+++ b/index.html
@@ -45,6 +45,99 @@
           <img src="./images/main-camera.png" alt="picture of a camera" />
         </div>
       </div>
+      <sectin class="popullar"></sectin>
+      <div class="popullar-collection">
+        <div class="product-card">
+          <div class="product-pic">
+            <img src="./images/tripod.png" alt="" />
+            <div class="product-info">
+              <h1>Flex Tripod</h1>
+              <span class="price-tag">$50.48</span>
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-pic">
+            <img src="./images/airpod.png" alt="" />
+            <div class="product-info">
+              <h1>Flex Tripod</h1>
+              <span class="price-tag">$50.48</span>
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-pic">
+            <img src="./images/mic.png" alt="" />
+            <div class="product-info">
+              <h1>Flex Tripod</h1>
+              <span class="price-tag">$50.48</span>
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-pic">
+            <img src="./images/drone.png" alt="" />
+            <div class="product-info">
+              <h1>Flex Tripod</h1>
+              <span class="price-tag">$50.48</span>
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-pic">
+            <img src="./images/lights.png" alt="" />
+            <div class="product-info">
+              <h1>Flex Tripod</h1>
+              <span class="price-tag">$50.48</span>
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-pic">
+            <img src="./images/setup.png" alt="" />
+            <div class="product-info">
+              <h1>Flex Tripod</h1>
+              <span class="price-tag">$50.48</span>
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-pic">
+            <img src="./images/camera.png" alt="" />
+            <div class="product-info">
+              <h1>Flex Tripod</h1>
+              <span class="price-tag">$50.48</span>
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-pic">
+            <img src="./images/single-light.png" alt="" />
+            <div class="product-info">
+              <h1>Flex Tripod</h1>
+              <span class="price-tag">$50.48</span>
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-pic">
+            <img src="./images/action.png" alt="" />
+            <div class="product-info">
+              <h1>Flex Tripod</h1>
+              <span class="price-tag">$50.48</span>
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
