added products info

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           <img src="./images/main-camera.png" alt="picture of a camera" />
         </div>
       </div>
+      <!-- popullar clollection -->
       <sectin class="popullar"></sectin>
       <div class="popullar-collection">
         <div class="product-card">
@@ -52,7 +53,14 @@
             <img src="./images/tripod.png" alt="" />
             <div class="product-info">
               <h1>Flex Tripod</h1>
+              <br />
               <span class="price-tag">$50.48</span>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              5
               <p>Wordwide shifting available Buyers protection possible!</p>
             </div>
           </div>
@@ -61,8 +69,15 @@
           <div class="product-pic">
             <img src="./images/airpod.png" alt="" />
             <div class="product-info">
-              <h1>Flex Tripod</h1>
+              <h1>Airbuds</h1>
+              <br />
               <span class="price-tag">$50.48</span>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              5
               <p>Wordwide shifting available Buyers protection possible!</p>
             </div>
           </div>
@@ -71,8 +86,15 @@
           <div class="product-pic">
             <img src="./images/mic.png" alt="" />
             <div class="product-info">
-              <h1>Flex Tripod</h1>
+              <h1>Microphone</h1>
+              <br />
               <span class="price-tag">$50.48</span>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              5
               <p>Wordwide shifting available Buyers protection possible!</p>
             </div>
           </div>
@@ -81,8 +103,15 @@
           <div class="product-pic">
             <img src="./images/drone.png" alt="" />
             <div class="product-info">
-              <h1>Flex Tripod</h1>
+              <h1>Drone</h1>
+              <br />
               <span class="price-tag">$50.48</span>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              5
               <p>Wordwide shifting available Buyers protection possible!</p>
             </div>
           </div>
@@ -91,8 +120,15 @@
           <div class="product-pic">
             <img src="./images/lights.png" alt="" />
             <div class="product-info">
-              <h1>Flex Tripod</h1>
+              <h1>Light Setup</h1>
+              <br />
               <span class="price-tag">$50.48</span>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              5
               <p>Wordwide shifting available Buyers protection possible!</p>
             </div>
           </div>
@@ -101,8 +137,15 @@
           <div class="product-pic">
             <img src="./images/setup.png" alt="" />
             <div class="product-info">
-              <h1>Flex Tripod</h1>
+              <h1>Photoshoot set</h1>
+              <br />
               <span class="price-tag">$50.48</span>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              5
               <p>Wordwide shifting available Buyers protection possible!</p>
             </div>
           </div>
@@ -111,8 +154,15 @@
           <div class="product-pic">
             <img src="./images/camera.png" alt="" />
             <div class="product-info">
-              <h1>Flex Tripod</h1>
+              <h1>Vlogging Camera</h1>
+              <br />
               <span class="price-tag">$50.48</span>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              5
               <p>Wordwide shifting available Buyers protection possible!</p>
             </div>
           </div>
@@ -121,8 +171,15 @@
           <div class="product-pic">
             <img src="./images/single-light.png" alt="" />
             <div class="product-info">
-              <h1>Flex Tripod</h1>
+              <h1>Green Screen</h1>
+              <br />
               <span class="price-tag">$50.48</span>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              5
               <p>Wordwide shifting available Buyers protection possible!</p>
             </div>
           </div>
@@ -131,8 +188,15 @@
           <div class="product-pic">
             <img src="./images/action.png" alt="" />
             <div class="product-info">
-              <h1>Flex Tripod</h1>
+              <h1>Action Camera</h1>
+              <br />
               <span class="price-tag">$50.48</span>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              5
               <p>Wordwide shifting available Buyers protection possible!</p>
             </div>
           </div>
