product card shape done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- header start -->
     <header>
       <nav class="navigation-bar">
-        <h1>Influencer products</h1>
+        <h3>Influencer products</h3>
       </nav>
     </header>
     <!-- header end -->
@@ -46,21 +46,26 @@
         </div>
       </div>
       <!-- popullar clollection -->
-      <sectin class="popullar"></sectin>
-      <div class="popullar-collection">
-        <div class="product-card">
-          <div class="product-pic">
-            <img src="./images/tripod.png" alt="" />
+
+      <section class="popullar-collection">
+        <h3>Popullar Clollection</h3>
+        <div class="product-list">
+          <div class="product-card">
+            <div class="product-pic">
+              <img src="./images/tripod.png" alt="" />
+            </div>
             <div class="product-info">
-              <h1>Flex Tripod</h1>
+              <h3 class="product-name">Flex Tripod</h3>
               <br />
-              <span class="price-tag">$50.48</span>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              5
+              <span class="price-tag">$50.48</span> <br />
+              <span class="ratting">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </span>
+              <span class="ratting-no">5</span>
               <p>Wordwide shifting available Buyers protection possible!</p>
             </div>
           </div>
@@ -68,140 +73,146 @@
         <div class="product-card">
           <div class="product-pic">
             <img src="./images/airpod.png" alt="" />
-            <div class="product-info">
-              <h1>Airbuds</h1>
-              <br />
-              <span class="price-tag">$50.48</span>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              5
-              <p>Wordwide shifting available Buyers protection possible!</p>
-            </div>
+          </div>
+          <div class="product-info">
+            <h3>Airbuds</h3>
+            <br />
+            <span class="price-tag">$50.48</span>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            5
+            <p>Wordwide shifting available Buyers protection possible!</p>
           </div>
         </div>
         <div class="product-card">
           <div class="product-pic">
             <img src="./images/mic.png" alt="" />
-            <div class="product-info">
-              <h1>Microphone</h1>
-              <br />
-              <span class="price-tag">$50.48</span>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              5
-              <p>Wordwide shifting available Buyers protection possible!</p>
-            </div>
+          </div>
+          <div class="product-info">
+            <h3>Microphone</h3>
+            <br />
+            <span class="price-tag">$50.48</span>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            5
+            <p>Wordwide shifting available Buyers protection possible!</p>
           </div>
         </div>
+
         <div class="product-card">
           <div class="product-pic">
             <img src="./images/drone.png" alt="" />
-            <div class="product-info">
-              <h1>Drone</h1>
-              <br />
-              <span class="price-tag">$50.48</span>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              5
-              <p>Wordwide shifting available Buyers protection possible!</p>
-            </div>
+          </div>
+          <div class="product-info">
+            <h3>Drone</h3>
+            <br />
+            <span class="price-tag">$50.48</span>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            5
+            <p>Wordwide shifting available Buyers protection possible!</p>
           </div>
         </div>
+
         <div class="product-card">
           <div class="product-pic">
             <img src="./images/lights.png" alt="" />
-            <div class="product-info">
-              <h1>Light Setup</h1>
-              <br />
-              <span class="price-tag">$50.48</span>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              5
-              <p>Wordwide shifting available Buyers protection possible!</p>
-            </div>
+          </div>
+          <div class="product-info">
+            <h3>Light Setup</h3>
+            <br />
+            <span class="price-tag">$50.48</span>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            5
+            <p>Wordwide shifting available Buyers protection possible!</p>
           </div>
         </div>
+
         <div class="product-card">
           <div class="product-pic">
             <img src="./images/setup.png" alt="" />
-            <div class="product-info">
-              <h1>Photoshoot set</h1>
-              <br />
-              <span class="price-tag">$50.48</span>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              5
-              <p>Wordwide shifting available Buyers protection possible!</p>
-            </div>
+          </div>
+          <div class="product-info">
+            <h3>Photoshoot set</h3>
+            <br />
+            <span class="price-tag">$50.48</span>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            5
+            <p>Wordwide shifting available Buyers protection possible!</p>
           </div>
         </div>
+
         <div class="product-card">
           <div class="product-pic">
             <img src="./images/camera.png" alt="" />
-            <div class="product-info">
-              <h1>Vlogging Camera</h1>
-              <br />
-              <span class="price-tag">$50.48</span>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              5
-              <p>Wordwide shifting available Buyers protection possible!</p>
-            </div>
+          </div>
+          <div class="product-info">
+            <h3>Vlogging Camera</h3>
+            <br />
+            <span class="price-tag">$50.48</span>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            5
+            <p>Wordwide shifting available Buyers protection possible!</p>
           </div>
         </div>
+
         <div class="product-card">
           <div class="product-pic">
             <img src="./images/single-light.png" alt="" />
-            <div class="product-info">
-              <h1>Green Screen</h1>
-              <br />
-              <span class="price-tag">$50.48</span>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              5
-              <p>Wordwide shifting available Buyers protection possible!</p>
-            </div>
+          </div>
+          <div class="product-info">
+            <h3>Green Screen</h3>
+            <br />
+            <span class="price-tag">$50.48</span>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            5
+            <p>Wordwide shifting available Buyers protection possible!</p>
           </div>
         </div>
+
         <div class="product-card">
           <div class="product-pic">
             <img src="./images/action.png" alt="" />
-            <div class="product-info">
-              <h1>Action Camera</h1>
-              <br />
-              <span class="price-tag">$50.48</span>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              5
-              <p>Wordwide shifting available Buyers protection possible!</p>
-            </div>
+          </div>
+          <div class="product-info">
+            <h3>Action Camera</h3>
+            <br />
+            <span class="price-tag">$50.48</span>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            5
+            <p>Wordwide shifting available Buyers protection possible!</p>
           </div>
         </div>
-      </div>
+      </section>
     </main>
   </body>
 </html>
