--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
           <img src="./images/main-camera.png" alt="picture of a camera" />
         </div>
       </div>
-      <!-- popullar clollection -->
+      <!-- Popular clollection -->
 
-      <section class="popullar-collection">
-        <h3>Popullar Clollection</h3>
+      <section class="popular-collection">
+        <h3>Popular Clollection</h3>
         <div class="product-list">
           <div class="product-card">
             <div class="product-pic">
@@ -69,150 +69,165 @@
               <p>Wordwide shifting available Buyers protection possible!</p>
             </div>
           </div>
-        </div>
-        <div class="product-card">
-          <div class="product-pic">
-            <img src="./images/airpod.png" alt="" />
-          </div>
-          <div class="product-info">
-            <h3>Airbuds</h3>
-            <br />
-            <span class="price-tag">$50.48</span>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            5
-            <p>Wordwide shifting available Buyers protection possible!</p>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-pic">
-            <img src="./images/mic.png" alt="" />
-          </div>
-          <div class="product-info">
-            <h3>Microphone</h3>
-            <br />
-            <span class="price-tag">$50.48</span>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            5
-            <p>Wordwide shifting available Buyers protection possible!</p>
-          </div>
-        </div>
 
-        <div class="product-card">
-          <div class="product-pic">
-            <img src="./images/drone.png" alt="" />
+          <div class="product-card">
+            <div class="product-pic">
+              <img src="./images/airpod.png" alt="" />
+            </div>
+            <div class="product-info">
+              <h3>Airbuds</h3>
+              <br />
+              <span class="price-tag">$50.48</span>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              5
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
           </div>
-          <div class="product-info">
-            <h3>Drone</h3>
-            <br />
-            <span class="price-tag">$50.48</span>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            5
-            <p>Wordwide shifting available Buyers protection possible!</p>
+          <div class="product-card">
+            <div class="product-pic">
+              <img src="./images/mic.png" alt="" />
+            </div>
+            <div class="product-info">
+              <h3>Microphone</h3>
+              <br />
+              <span class="price-tag">$50.48</span>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              5
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
           </div>
-        </div>
 
-        <div class="product-card">
-          <div class="product-pic">
-            <img src="./images/lights.png" alt="" />
+          <div class="product-card">
+            <div class="product-pic">
+              <img src="./images/drone.png" alt="" />
+            </div>
+            <div class="product-info">
+              <h3>Drone</h3>
+              <br />
+              <span class="price-tag">$50.48</span>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              5
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
           </div>
-          <div class="product-info">
-            <h3>Light Setup</h3>
-            <br />
-            <span class="price-tag">$50.48</span>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            5
-            <p>Wordwide shifting available Buyers protection possible!</p>
-          </div>
-        </div>
 
-        <div class="product-card">
-          <div class="product-pic">
-            <img src="./images/setup.png" alt="" />
+          <div class="product-card">
+            <div class="product-pic">
+              <img src="./images/lights.png" alt="" />
+            </div>
+            <div class="product-info">
+              <h3>Light Setup</h3>
+              <br />
+              <span class="price-tag">$50.48</span>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              5
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
           </div>
-          <div class="product-info">
-            <h3>Photoshoot set</h3>
-            <br />
-            <span class="price-tag">$50.48</span>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            5
-            <p>Wordwide shifting available Buyers protection possible!</p>
-          </div>
-        </div>
 
-        <div class="product-card">
-          <div class="product-pic">
-            <img src="./images/camera.png" alt="" />
+          <div class="product-card">
+            <div class="product-pic">
+              <img src="./images/setup.png" alt="" />
+            </div>
+            <div class="product-info">
+              <h3>Photoshoot set</h3>
+              <br />
+              <span class="price-tag">$50.48</span>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              5
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
           </div>
-          <div class="product-info">
-            <h3>Vlogging Camera</h3>
-            <br />
-            <span class="price-tag">$50.48</span>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            5
-            <p>Wordwide shifting available Buyers protection possible!</p>
-          </div>
-        </div>
 
-        <div class="product-card">
-          <div class="product-pic">
-            <img src="./images/single-light.png" alt="" />
+          <div class="product-card">
+            <div class="product-pic">
+              <img src="./images/camera.png" alt="" />
+            </div>
+            <div class="product-info">
+              <h3>Vlogging Camera</h3>
+              <br />
+              <span class="price-tag">$50.48</span>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              5
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
           </div>
-          <div class="product-info">
-            <h3>Green Screen</h3>
-            <br />
-            <span class="price-tag">$50.48</span>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            5
-            <p>Wordwide shifting available Buyers protection possible!</p>
-          </div>
-        </div>
 
-        <div class="product-card">
-          <div class="product-pic">
-            <img src="./images/action.png" alt="" />
+          <div class="product-card">
+            <div class="product-pic">
+              <img src="./images/single-light.png" alt="" />
+            </div>
+            <div class="product-info">
+              <h3>Green Screen</h3>
+              <br />
+              <span class="price-tag">$50.48</span>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              5
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
           </div>
-          <div class="product-info">
-            <h3>Action Camera</h3>
-            <br />
-            <span class="price-tag">$50.48</span>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            5
-            <p>Wordwide shifting available Buyers protection possible!</p>
+
+          <div class="product-card">
+            <div class="product-pic">
+              <img src="./images/action.png" alt="" />
+            </div>
+            <div class="product-info">
+              <h3>Action Camera</h3>
+              <br />
+              <span class="price-tag">$50.48</span>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              5
+              <p>Wordwide shifting available Buyers protection possible!</p>
+            </div>
           </div>
         </div>
+        <a href="">See More <i class="fas fa-arrow-right"></i></a>
       </section>
     </main>
+    <footer>
+      <div>
+        <h3>Influencer products</h3>
+        <p>Copyright © 2020 influencer products</p>
+        <p>All rights reserved</p>
+        <ol>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ol>
+      </div>
+    </footer>
   </body>
 </html>
