--- a/index.html
+++ b/index.html
@@ -217,16 +217,22 @@
       </section>
     </main>
     <footer>
-      <div>
+      <div class="footer-content">
         <h3>Influencer products</h3>
         <p>Copyright © 2020 influencer products</p>
         <p>All rights reserved</p>
-        <ol>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ol>
+        <ul>
+          <li>
+            <a href=""><i class="fab fa-instagram"></i></a>
+          </li>
+          <li>
+            <a href=""><i class="fab fa-twitter"></i></a>
+          </li>
+          <li><i class="fab fa-twitter"></i></li>
+          <li>
+            <a href=""><i class="fab fa-facebook"></i></a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
