--- a/index.html
+++ b/index.html
@@ -221,14 +221,16 @@
         <h3>Influencer products</h3>
         <p>Copyright © 2020 influencer products</p>
         <p>All rights reserved</p>
-        <ul>
+        <ul class="social-media">
           <li>
             <a href=""><i class="fab fa-instagram"></i></a>
           </li>
           <li>
             <a href=""><i class="fab fa-twitter"></i></a>
           </li>
-          <li><i class="fab fa-twitter"></i></li>
+          <li>
+            <a href=""><i class="fab fa-youtube"></i></a>
+          </li>
           <li>
             <a href=""><i class="fab fa-facebook"></i></a>
           </li>
