--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
     </main>
     <footer>
       <div class="footer-content">
-        <h3>Influencer products</h3>
+        <h5>Influencer products</h5>
         <p>Copyright © 2020 influencer products</p>
-        <p>All rights reserved</p>
+        <span>All rights reserved</span>
         <ul class="social-media">
           <li>
             <a href=""><i class="fab fa-instagram"></i></a>
