fix footer space

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       <div class="footer-content">
         <h5>Influencer products</h5>
         <p>Copyright © 2020 influencer products</p>
-        <span>All rights reserved</span>
+        <p>All rights reserved</p>
         <ul class="social-media">
           <li>
             <a href=""><i class="fab fa-instagram"></i></a>
